--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@vue/apollo-composable": "^4.0.0-alpha.15",
     "daisyui": "^1.14.5",
+    "graphql": "^15.6.1",
+    "graphql-tag": "^2.12.5",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
