--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@vue/apollo-composable": "^4.0.0-alpha.15",
+    "axios": "^0.23.0",
     "daisyui": "^1.14.5",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
