--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue/apollo-composable": "^4.0.0-alpha.15",
     "axios": "^0.23.0",
     "daisyui": "^1.14.5",
+    "ethers": "^5.5.1",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
     "vue": "^3.2.16",
@@ -25,6 +26,7 @@
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/node": "^16.11.1",
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
