Added pools section

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@types/color": "^3.0.2",
     "@vue/apollo-composable": "^4.0.0-alpha.15",
     "axios": "^0.23.0",
+    "color": "^4.0.1",
     "daisyui": "^1.14.5",
     "ethers": "^5.5.1",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
+    "randomcolor": "^0.6.2",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
@@ -27,6 +30,7 @@
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.11.1",
+    "@types/randomcolor": "^0.5.6",
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
