--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
     "randomcolor": "^0.6.2",
+    "uuid": "^8.3.2",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
@@ -31,6 +32,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.11.1",
     "@types/randomcolor": "^0.5.6",
+    "@types/uuid": "^8.3.1",
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
