--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "randomcolor": "^0.6.2",
     "uuid": "^8.3.2",
     "vue": "^3.2.16",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.3.0",
